@@ -2,6 +2,9 @@
 Release 3.1-1.1 Start 26/12/2024 End XX/XX/XXXX
 - 26/12/2024
 1. Renamed scripts with .in extension to .sh
+- 01/01/2025
+2. qmail-remote.c, tcpto.c, tcpto.h: added tcpto timeout definitions in
+   tcpto.h
 
 * Tue Dec 24 2024 20:28:14 +0000 Manvendra Bhangui <indimail-mta@indimail.org 3.0.9-1.1%{?dist}
 Release 3.0.9-1.1 Start 08/08/2024 End 24/12/2024
